Xử lí phần giao diện phần loard danh sách các công việc đã đăng tuyển của nhà tuyển dụng

--- a/frontend/job-freelance-ui/src/app/header/header.component.html
+++ b/frontend/job-freelance-ui/src/app/header/header.component.html
@@ -41,6 +41,7 @@
             <li  class="has-children">
               <a  routerLinkActive="active">Settings</a>
               <ul class="dropdown">
+                <li ><a routerLink="/" routerLinkActive="active" (click)="doListJob()">List Posted Job</a></li>
                 <li ><a routerLink="/" routerLinkActive="active" (click)="doLogout()">logout</a></li>
               </ul>
             </li>
