cập nhật code post job

--- a/frontend/job-freelance-ui/src/app/header/header.component.html
+++ b/frontend/job-freelance-ui/src/app/header/header.component.html
@@ -56,6 +56,8 @@
       <div class="right-cta-menu text-right d-flex aligin-items-center col-6">
         <div class="ml-auto">
           @if (isLogin){
+            <!--11.1.1: Trên thanh điều hướng có một thẻ <a> với nội dung là “Post a Job” được
+            ánh xạ tới trang đăng tuyển công việc (/post-job)-->
           <a routerLink="/post-job" routerLinkActive="active"
              class="btn btn-outline-white border-width-2 d-none d-lg-inline-block" ><span
             class="mr-2 icon-add"></span>Post a Job</a>
