--- a/frontend/job-freelance-ui/src/app/home/home.component.html
+++ b/frontend/job-freelance-ui/src/app/home/home.component.html
@@ -130,7 +130,7 @@
 
           <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
             <div class="job-listing-position custom-width w-50 mb-3 mb-sm-0">
-              <h2></h2>
+              <h2>{{item.title}}</h2>
               <span>Deadline apply CV</span>: <strong>{{item.deadlineCV}}</strong>
             </div>
             <div class="job-listing-location mb-3 mb-sm-0 custom-width w-25">
